<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.NewPartnerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardElevation="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_user_round"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="bottom"
                        android:tint="@color/colorPrimaryDark"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldNamePartner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/colorPrimary"
                        android:hint="@string/user_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextNamePartner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            android:paddingBottom="4dp"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_identification"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="bottom"
                        android:tint="@color/colorPrimaryDark"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldIdentificationPartner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/colorPrimary"
                        android:hint="@string/user_identification">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextIdentificationPartner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            android:paddingBottom="4dp"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_call"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="bottom"
                        android:tint="@color/colorPrimaryDark"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldPhonePartner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/colorPrimary"
                        android:hint="@string/user_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPhonePartner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            android:paddingBottom="4dp"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_mail"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="bottom"
                        android:tint="@color/colorPrimaryDark"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldMailPartner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/colorPrimary"
                        android:hint="@string/user_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextMailPartner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            android:paddingBottom="4dp"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="bottom"
                        android:tint="@color/colorPrimaryDark"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldLocationPartner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/colorPrimary"
                        android:hint="@string/user_location">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextLocationPartner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            android:paddingBottom="4dp"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_birthdate"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="bottom"
                        android:tint="@color/colorPrimaryDark"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldBirthdatePartner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/colorPrimary"
                        android:hint="@string/user_birthdate">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextBirthdatePartner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            android:paddingBottom="4dp"
                            android:inputType="date"
                            android:maxLines="1"
                            android:focusable="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterPartner"
            style="@style/Widget.KajobApp.Button"
            app:icon="@drawable/ic_save_24"
            app:iconTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_save" />


    </LinearLayout>


</ScrollView>